correct braces according to PMD
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@430 7df28f57-6730-0410-8a28-a3245024edd1